--- a/Form Module/framework/FormDisplayReport/FormDisplayReport/REPORTS/Payroll/rptPrintOutRekapPayrollNonStaff.rdlc
+++ b/Form Module/framework/FormDisplayReport/FormDisplayReport/REPORTS/Payroll/rptPrintOutRekapPayrollNonStaff.rdlc
@@ -316,6 +316,9 @@
             <TablixColumn>
               <Width>1.8069cm</Width>
             </TablixColumn>
+            <TablixColumn>
+              <Width>1.8069cm</Width>
+            </TablixColumn>
           </TablixColumns>
           <TablixRows>
             <TablixRow>
@@ -394,9 +397,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>15</ColSpan>
+                    <ColSpan>16</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -424,7 +428,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=iif(not isnothing(Fields!absen.Value),Fields!absen.Value,iif(Fields!banyakjamkerjanyata.Value=8,"K","K" &amp; Fields!banyakjamkerjanyata.Value))</Value>
+                              <Value>=iif(not isnothing(Fields!nama.Value),iif(not isnothing(Fields!absen.Value),Fields!absen.Value,iif(Fields!banyakjamkerjanyata.Value=8,"K","K" &amp; Fields!banyakjamkerjanyata.Value)),Nothing)</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                                 <Format>#,0.00;(#,0.00)</Format>
@@ -862,6 +866,40 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox21</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>Solid</Style>
+                        </Border>
+                        <BottomBorder>
+                          <Style>None</Style>
+                        </BottomBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox31">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox31</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -1462,6 +1500,43 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="potonganpph">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!potonganpph.Value</Value>
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>potonganpph</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <BottomBorder>
+                          <Style>None</Style>
+                        </BottomBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="upahtotal">
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
@@ -1547,7 +1622,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=iif(Fields!absen.Value="C" or Fields!absen.Value="L",Nothing, "KS" &amp; Fields!shift.Value)</Value>
+                              <Value>=iif(Fields!absen.Value="C" or Fields!absen.Value="L",Nothing, iif(not isnothing(Fields!nama.Value),"KS" &amp; Fields!shift.Value,nothing))</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                                 <Format>#,0;(#,0)</Format>
@@ -1984,6 +2059,40 @@
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox212</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Style>Solid</Style>
+                        </Border>
+                        <TopBorder>
+                          <Style>None</Style>
+                        </TopBorder>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox33">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value />
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox33</rd:DefaultName>
                       <Style>
                         <Border>
                           <Style>Solid</Style>
@@ -2745,6 +2854,44 @@
               <TablixHeader>
                 <Size>1.5cm</Size>
                 <CellContents>
+                  <Textbox Name="Textbox28">
+                    <CanGrow>true</CanGrow>
+                    <KeepTogether>true</KeepTogether>
+                    <Paragraphs>
+                      <Paragraph>
+                        <TextRuns>
+                          <TextRun>
+                            <Value>POTONGAN CICILAN PPH 21</Value>
+                            <Style>
+                              <FontSize>7pt</FontSize>
+                            </Style>
+                          </TextRun>
+                        </TextRuns>
+                        <Style>
+                          <TextAlign>Center</TextAlign>
+                        </Style>
+                      </Paragraph>
+                    </Paragraphs>
+                    <rd:DefaultName>Textbox28</rd:DefaultName>
+                    <Style>
+                      <Border>
+                        <Style>Solid</Style>
+                      </Border>
+                      <BackgroundColor>LightGreen</BackgroundColor>
+                      <VerticalAlign>Middle</VerticalAlign>
+                      <PaddingLeft>2pt</PaddingLeft>
+                      <PaddingRight>2pt</PaddingRight>
+                      <PaddingTop>2pt</PaddingTop>
+                      <PaddingBottom>2pt</PaddingBottom>
+                    </Style>
+                  </Textbox>
+                </CellContents>
+              </TablixHeader>
+            </TablixMember>
+            <TablixMember>
+              <TablixHeader>
+                <Size>1.5cm</Size>
+                <CellContents>
                   <Textbox Name="Textbox213">
                     <KeepTogether>true</KeepTogether>
                     <Paragraphs>
@@ -3150,7 +3297,7 @@
         <Top>3.55105cm</Top>
         <Left>0.15875cm</Left>
         <Height>3.5cm</Height>
-        <Width>36.89768cm</Width>
+        <Width>38.70458cm</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -3398,10 +3545,10 @@
         </Style>
       </Textbox>
     </ReportItems>
-    <Height>7.92772cm</Height>
+    <Height>7.3cm</Height>
     <Style />
   </Body>
-  <Width>37.2681cm</Width>
+  <Width>39cm</Width>
   <Page>
     <PageFooter>
       <Height>0.7cm</Height>
